--- a/styles/adaptation/min1024.css
+++ b/styles/adaptation/min1024.css
@@ -243,7 +243,7 @@
     width: 31.9%;
   }
 
-  .swiper-container_publication {
+  .publication__swiper {
     padding-top: 93px;
     padding-left: 0;
     padding-right: 0;
