--- a/styles/sections/events.css
+++ b/styles/sections/events.css
@@ -13,14 +13,14 @@
   display: flex;
   flex-flow: column;
   box-sizing: border-box;
-  padding: 214px 0 48px 0;
+  padding: 214px 11px 48px 29px;
   border: 1px solid var(--grey_CA);
   background-position: top left;
   background-repeat: no-repeat;
   background-size: 290px 200px;
 }
 
-.swiper-wrapper.swiper-wrapper_events {
+.swiper-wrapper.events__wrapper {
   display: flex;
   padding-bottom: 20px;
   height: 683px;
@@ -29,7 +29,6 @@
 .events-card__place,
 .events-card__date {
   margin: 0;
-  padding-right: 11px;
   font-weight: 600;
   font-size: 12px;
   line-height: 16px;
@@ -38,6 +37,7 @@
 }
 
 .events-card__heading {
+  margin: 0;
   font-size: 24px;
   font-weight: 600;
   letter-spacing: -0.005em;
@@ -47,7 +47,6 @@
 
 .events-card__text,
 .events-card__link {
-  padding: 0 15px 0 29px;
   font-size: 16px;
   line-height: 32px;
 }
@@ -56,7 +55,7 @@
   margin-top: 3px;
   display: -webkit-box;
   margin-bottom: 25px;
-  -webkit-line-clamp: 10;
+  -webkit-line-clamp: 8;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -73,8 +72,8 @@
 .events-card__link::after {
   position: absolute;
   bottom: 0;
-  left: 29px;
-  right: 15px;
+  left: 0;
+  right: 0;
   content: "";
   height: 1px;
   background-color: var(--background_btn);
