--- a/styles/sections/modal.css
+++ b/styles/sections/modal.css
@@ -2,29 +2,36 @@
   position: relative;
 }
 
-.modal__wrap {
-  position: absolute;
+.modal__container {
+  position: fixed;
   z-index: 50;
   top: 0;
   left: 0;
   right: 0;
-  display: flex;
-  flex-flow:  column nowrap;
-  align-items: center;
-  background: var(--text_light);
+  bottom: 0;
+  overflow-y: scroll;
+  background-color: rgba(0, 0, 0, .5);
   animation: showModal .5s ease-in-out;
 }
 
-  @keyframes showModal {
-    from {
-      opacity: 0;
-    }
+.modal__wrap {
+  margin: 5% auto 0;
+  max-width: 90%;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  background: var(--text_light);
+}
 
-    to {
-      opacity: 1;
-    }
+@keyframes showModal {
+  from {
+    opacity: 0;
   }
 
+  to {
+    opacity: 1;
+  }
+}
 
 .modal__picture__wrap {
   display: flex;
@@ -35,7 +42,8 @@
 .modal__close-btn {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 5%;
+  margin-top: 5%;
   padding: 15px;
   border: none;
   background-color: inherit;
